fix: TKMDPA-8; TKMDPA-10; body overflow fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,7 +23,7 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 iframe{
